<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/next_button_color"
            android:orientation="horizontal"
            android:padding="24dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/shipping"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tax_rate_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/tax_rate"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/order_total"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_big" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tax_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_big" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/paypal_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@null"
                android:src="@drawable/pay_paypal" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/pay_credit_card" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/next_button_color"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/shipping_edit"
                android:layout_alignParentLeft="true"
                android:text="@string/shipping_to_"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_big" />

            <TextView
                android:id="@+id/shipping_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="4dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="4dp"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_big" />


            <TextView
                android:id="@+id/recp_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipping_edit"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/font_normal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/order_edit"
                android:layout_alignParentLeft="true"
                android:text="@string/your_order_"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_big" />

            <TextView
                android:id="@+id/order_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/recp_info"
                android:paddingBottom="4dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="4dp"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_big" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>